--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@syncfusion/ej2-angular-buttons": "^20.2.46",
+    "@syncfusion/ej2-angular-inputs": "^20.2.45",
+    "@syncfusion/ej2-angular-navigations": "^20.2.46",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
